Revert "SSCSCI-1804 Documents tab - display in chronological order (Date) (#1967)"
This reverts commit 6aff44745ffad4313cfba5cec66bfd9463d81e46.